# blockchain-voting_2019

./: README.md
elec2020/dit-blockchain/services/votings-service/: Cargo.toml  build.rs
elec2020/dit-blockchain/services/votings-service/src/: config.rs  errors.rs  lib.rs  service.rs
elec2020/dit-blockchain/services/votings-service/src/api/: ballot_by_index.rs  ballot_by_store_tx_hash.rs  decryption_statistics.rs  issued_ballots_amount.rs  mod.rs  registered_voters_amount.rs  stored_ballots_amount.rs  voting_results.rs
elec2020/dit-blockchain/services/votings-service/src/enums/: mod.rs
elec2020/dit-blockchain/services/votings-service/src/factory/: args.rs  mod.rs
elec2020/dit-blockchain/services/votings-service/src/proto/: mod.rs  schema.proto  transactions.proto
elec2020/dit-blockchain/services/votings-service/src/schema/: ballots_storage.rs  mod.rs  service_data.rs  voting.rs  votings_registry.rs
elec2020/dit-blockchain/services/votings-service/src/transactions/: add_voter_key.rs  create_voting.rs  decrypt_ballot.rs  issue_ballot.rs  publish_decryption_key.rs  register_voters.rs  revoke_voter_participation.rs  stop_registration.rs
key-generator-source/: Cargo.toml
key-generator-source/rusty_secrets/: README.md
key-generator-source/rusty_secrets/src/: lagrange.rs
key-generator-source/src/: main.rs
key-generator-source/src/cryptor/: mod.rs
key-generator-source/src/errors/: cryptor.rs  invalid_args.rs  key_combining.rs  key_splitting.rs  mod.rs
key-generator-source/src/subcommands/: combine.rs  create.rs  encrypt.rs  generate.rs  mod.rs
(+434 files in other folders)
