[package]
name = "dit-votings-service"
version = "1.0.0"
authors = []
edition = "2018"

[dependencies]
exonum = "0.12.1"
exonum-derive = "0.12.0"
exonum-merkledb = "0.12.0"
exonum_sodiumoxide = "0.0.22"
derive-new = "0.5.8"
failure = "0.1.5"
num-bigint = { version = "0.2", features = ["rand", "serde"] }
num-traits = "0.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_repr = "0.1"
protobuf = "2.8.0"
hex = "0.3.2"
toml = "0.5"

[build-dependencies]
exonum-build = "0.12.0"
